# data_science_template

./: README.MD  cookiecutter.json
{{cookiecutter.directory_name}}/: Dockerfile  Makefile  README.MD  docker-compose.yml  pyproject.toml
{{cookiecutter.directory_name}}/data/: raw.dvc
{{cookiecutter.directory_name}}/src/: process.py  train_model.py
